; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_buildsym.c_compare_line_numbers.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_buildsym.c_compare_line_numbers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linetable_entry = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_line_numbers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_line_numbers(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.linetable_entry*, align 8
  %7 = alloca %struct.linetable_entry*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.linetable_entry*
  store %struct.linetable_entry* %9, %struct.linetable_entry** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.linetable_entry*
  store %struct.linetable_entry* %11, %struct.linetable_entry** %7, align 8
  %12 = load %struct.linetable_entry*, %struct.linetable_entry** %6, align 8
  %13 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.linetable_entry*, %struct.linetable_entry** %7, align 8
  %16 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %37

20:                                               ; preds = %2
  %21 = load %struct.linetable_entry*, %struct.linetable_entry** %6, align 8
  %22 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.linetable_entry*, %struct.linetable_entry** %7, align 8
  %25 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp sgt i64 %23, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %37

29:                                               ; preds = %20
  %30 = load %struct.linetable_entry*, %struct.linetable_entry** %6, align 8
  %31 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.linetable_entry*, %struct.linetable_entry** %7, align 8
  %34 = getelementptr inbounds %struct.linetable_entry, %struct.linetable_entry* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = sub nsw i32 %32, %35
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %29, %28, %19
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
